# Dmarket_bot

./: .arcadius_memory.md  .clawignore  .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .mstyignore  .openclawignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  AGENTS.md  ALGORITHMS.md  ANALYSIS_ARCHITECTURE.md  ANALYSIS_FINANCIAL_INSTRUMENTS_AND_STRATEGIES.md  ANALYSIS_REPORT.md  ANALYSIS_STAGE1.md  ANALYSIS_STAGE2.md  ANALYSIS_STAGE3.md  ANALYSIS_STAGE4.md  ARCHITECTURAL_IMPROVEMENTS.md  ARKADY_V3_READY.txt  ArkadyWatcher.ps1  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arkady  Dockerfile.dev  IDENTITY.md  LICENSE  MEMORY.md  MODE_FLASH.ps1  MODE_PRO.ps1  Makefile  PROFITABILITY_REPORT.md  README.md  README_ARKADY.md  READY_FOR_TRADE.txt  REVIEW.md  (+41 more)
.agent/workflows/: analyze.md  cleanup.md  debug-modules.md  refactor.md  test.md
.archy/: baseline.json  history.jsonl
.arkady/: EVOLUTION_STATE.json
.arkady/config/: AGENTS_ROSTER.json  CODING_STANDARDS.md  GITHUB_CONFIG.json  MODEL_ROUTER.md  gemini_wrapper.py  logger_config.py
.arkady/hyperskills/: SKILL_DMARKET.md  (+3 more)
.config/: pyrightconfig.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.memory-bank/: ROADMAP_DMARKET.md
.openclaw/: workspace-state.json
.opencode/: PR_GUIDE.md
alembic/: README.md  env.py
config/: config.yaml  cron.json  cs2_waxpeer_filters.json  rare_attributes.json
data/: bot_persistence.pickle  cs2_events.json  dmarket_history.db  dmarket_history.db-shm  dmarket_history.db-wal  dmarket_shadow.db  dmarket_state.db  dmarket_state.db-shm  dmarket_state.db-wal  label_encoder.pkl  price_model.pkl  watchdog_heartbeat.txt  watchdog_state.json
dev_tools/: ps_helper.ps1
docs/: AGENTS_ROSTER.md  AI_TOOLS_CONFIG.md  ANALYSIS_TYPES.md  API_ANALYSIS.md  API_COMPLETE_REFERENCE.md  ARBITRAGE.md  ARCHITECTURE.md  ARCHITECTURE_MANIFESTO.md  ARCHITECTURE_V5.md  AUTONOMOUS_BACKLOG.md  CLAUDE.md  CONTRACT_TESTING.md  CS2_FINANCIAL_INSTRUMENTS.md  DATABASE_ANALYSIS.md  DATABASE_MIGRATIONS.md  DEPENDENCY_INJECTION.md  DEVELOPER_LOG.md  DMARKET_API_FULL_SPEC.md  DMARKET_API_V1_SPEC.md  DMARKET_IMPROVEMENTS.md  DMARKET_PRODUCT_ROADMAP.md  FINAL_AUDIT_REPORT.md  FULL_PROJECT_AUDIT_2026.md  HISTORY.md  LAST_SESSION_REPORT.md  MCP_SERVERS_GUIDE.md  OPENCLAW_CORE.html  ORCHESTRATION_PROTOCOL.md  PROTOCOL_V5.1.md  QUICK_START.md  README.md  ROADMAP_V6.md  ROADMAP_V8.md  SECURITY.md  SKILLSMP_IMPLEMENTATION.md  STEAM_API_REFERENCE.md  STRATEGY_ROADMAP.md  SUMMARY_AUDIT.md  SYSTEM_MANIFEST.json  TELEGRAM_BOT_API.md  (+9 more)
docs-site/: README.md  mkdocs.yml
docs_archive/: SYSTEM_FLOW.md  classes_DMarketBot_Trading.mmd  packages_DMarketBot_Trading.mmd
examples/: phase2_implementation_examples.py  steam_arbitrage_example.py  target_enhancements_usage.py
k8s/: deployment.yml
legacy/: dmarket_api_client_legacy.py
memory/: 2026-02-01.md  checkpoints.json  task-queue.json  thinking_log.md
n8n/: README.md
rust_core_src/: Cargo.toml  pyproject.toml
rust_core_src/src/: lib.rs
scratch/: bench_nacl.py  check_balance.py  check_db.py  deep_demo.py  fix_md.py  import_checker.py  monte_carlo_audit.py  report_profit.py  sandbox_audit.py  sandbox_v12_1.py  sandbox_v12_2_audit.py  stress_tester.py  test.py  test_backtester_refactor.py  test_commands_refactor.py  test_data_collector_refactor.py  test_dmarket_api_client_refactor.py  test_historical_data_refactor.py  test_price_analytics_refactor.py  test_price_history_refactor.py  test_sandbox_v9.py  test_target_sniping_refactor.py  test_telegram_bot.py  variance_test.py  watchdog_run.py
scripts/: analyze_improvements.py  analyze_prices.py  archive_logs.sh  auto_fix.py  backup_database.py  broadcast_log.py  check_balance.py  check_code.py  check_cyrillic.py  check_dependencies.py  check_health.ps1  check_offers.py  clear_bot_updates.py  collect_ml_training_data.py  coverage_check.py  create_env_file.py  debug_fast.py  debug_suite.py  deploy.sh  dmarket_api_example.py  encrypt_secrets.py  exec_guard.py  find_long_functions.py  generate_changelog.py  generate_refactoring_todo.py  generate_skills_report.py  generate_test_template.py  get_chat_id.py  github_actions_monitor.py  github_forge.py  github_sync.py  health_check.py  init_cross_platform_db.sql  init_db.py  init_session.ps1  live_logger.py  log_compressor.py  memory_overload.py  migrate_to_db.py  migrate_to_db_v2.py  (+48 more)
src/: __main__.py  adaptive_controller.py  agent_wrapper.py  autonomous_scanner.py  check_system.py  config.py  containers.py  dmarket_api_client.py  dmarket_auth.py  env_mask.py  interfaces.py  inventory_manager.py  llm_engine.py  main.py  market_data_fetcher.py  markov_model.py  models.py  price_validator.py  quadriga.py  rust_core.py  stress_test_shm.py  telegram_bot.py  telegram_reporter.py  test_live_prices.py  trade_gate.py  trading_bot.py
src/rust_core/: Cargo.toml  pyproject.toml
src/rust_core/.cargo/: config.toml
src/rust_core/src/: backtester.rs  executor.rs  lib.rs  main.rs  memory.rs  net_draft.rs  network.rs  obi.rs  parser.rs  rate_limiter.rs  strategy.rs
src/rust_core/src/math/: cointegration.rs
src/rust_core_cargo/: Cargo.toml
src/rust_core_cargo/src/: lib.rs
tests/: __init__.py  arkady_pydantic_test.py  audit_db.py  comprehensive_system_audit.py  conftest.py  conftest_di.py  conftest_vcr.py  e2e_backtest.py  endurance_test.py  kamikaze.py  manual_api_test.py  omega_test.py  reload_sandbox.py  sandbox_full_cycle.py  sandbox_v14_1_microstructure.py  sandbox_v14_3.py  sandbox_v14_6_full_cycle.py  simulate_strategy.py  stress_v4_system.py  test_ai_integration.py  test_alert_throttler.py  test_algo_pack.py  test_api_call.py  test_api_mock.py  test_ascii_docstrings.py  test_blackboard.py  test_bottlenecks.py  test_bulkhead.py  test_ci_smoke.py  test_competition.py  test_config.py  test_containers.py  test_cs2cap_improvements.py  test_database.py  test_db_core.py  test_db_locks.py  test_dead_letter_queue.py  test_dmarket_api_circuit_breaker.py  test_dynamic_config.py  test_edge_cases_and_bottlenecks.py  (+27 more)
venv_debug/: pyvenv.cfg
(+3992 files in other folders)
