# ============================================================================
# PROJECT METADATA (PEP 621)
# ============================================================================

[project]
name = "dmarket-bot"
version = "1.0.0"
description = "Бот для торговли игровыми предметами на площадках DMarket и Waxpeer"
readme = "README.md"
requires-python = ">=3.12"  # Requires Python 3.12+ (3.13 recommended)
license = {text = "MIT"}
authors = [
    {name = "DMarket Bot Team", email = "example@example.com"}
]
keywords = ["telegram", "bot", "dmarket", "waxpeer", "trading", "arbitrage", "csgo", "cs2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "python-telegram-bot>=22.0",    # Latest stable (June 2025)
    "python-dotenv>=1.1.0",         # Latest stable
    "requests>=2.32.0",             # Latest stable
    "httpx>=0.28.0",                # Latest with HTTP/2 support
    "psutil>=7.0.0",                # System monitoring
    "circuitbreaker>=2.1.0",        # Circuit breaker pattern
    "pynacl (>=1.6.1,<2.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "structlog>=25.0.0",            # Structured logging
    "cryptography>=45.0.0",         # For JWT/encryption
]

[project.optional-dependencies]
monitoring = [
    "telethon>=1.40.0",             # Telegram client for monitoring
]
dev = [
    "ruff>=0.14.0",                # Ruff: linting + formatting (replaces flake8, isort, black)
    "mypy>=1.19.0",                # Latest MyPy strict type checking
    "pytest>=8.4",                 # Latest pytest
    "pytest-asyncio>=1.0.0",       # Latest async support
    "pytest-cov>=7.0",             # Latest coverage plugin
    "pytest-xdist>=3.8",           # Parallel tests
    "pytest-mock>=3.15.0",         # Latest mocking
    "pytest-rerunfailures>=14.0",  # Retry для flaky async tests
    "pytest-timeout>=2.3",         # Таймауты для зависших тестов
    "pytest-randomly>=3.16",       # Рандомизация порядка тестов
    "black>=25.0",                 # Latest Black formatter
    "sphinx>=8.0",                 # Latest Sphinx
    "sphinx-rtd-theme>=3.0",       # Latest RTD theme
    "pre-commit>=4.0",             # Latest pre-commit
    "bandit>=1.9.0",               # Latest security linter
    "safety>=3.7",                 # Latest dependency checker
    "pip-audit>=2.8",              # Dependency vulnerability scanner
    "coverage[toml]>=7.12",        # Coverage с TOML support
    "aiosqlite>=0.21.0",           # In-memory DB для тестов
    "mutmut>=3.2",                 # Mutation testing
    "hypothesis>=6.150",           # Property-based testing
    "locust>=2.37",                # Load testing
]

[project.urls]
Homepage = "https://github.com/example/dmarket-bot"
Documentation = "https://github.com/example/dmarket-bot/docs"
Repository = "https://github.com/example/dmarket-bot"
Issues = "https://github.com/example/dmarket-bot/issues"

[project.scripts]
dmarket-bot = "src.__main__:main"
dmarket-run = "src.telegram_bot.bot_v2:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# BANDIT - SECURITY SCANNING
# ============================================================================

[tool.bandit]
# Directories to scan
# paths = ["src"]

# Tests to skip (comma-separated list)
skips = [
    "B105",  # Hardcoded password string - false positives with "pass", enum values
    "B106",  # Hardcoded password funcarg - false positives with default empty strings
    "B311",  # Standard pseudo-random generators - OK for non-cryptographic use (jitter, simulation)
]

# Tests to run (comma-separated list) - if empty, all tests run
# tests = []

# Exclude directories
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

# Confidence levels: LOW, MEDIUM, HIGH
# Only report issues with specified confidence level or higher
# confidence = "MEDIUM"

# Severity levels: LOW, MEDIUM, HIGH
# Only report issues with specified severity level or higher
# severity = "LOW"

# Output format: json, txt, html, xml, csv
# format = "json"

# Include full file paths in report
# include_paths = true

# Show code snippets in report
# show_source = true

# Recursive scanning
# recursive = true

# Assert checking
# assert_used = true

# ============================================================================
# MUTMUT - MUTATION TESTING
# ============================================================================

[tool.mutmut]
# Paths to mutate
paths_to_mutate = "src/"

# Test command to run
runner = "python -m pytest tests/ -x --tb=no -q"

# Tests directory
tests_dir = "tests/"

# Files to exclude from mutation
dict_synonyms = ["Enum", "IntEnum", "StrEnum"]

# Disable colored output in CI
# no_progress = true

# NOTE: [tool.black] section removed - Ruff-format fully replaces Black
# Ruff-format is faster, integrated with the linter, and compatible with Black style

[tool.ruff]
line-length = 100
target-version = "py313"  # Python 3.13+ features

# Enable preview rules for latest lint improvements
preview = true

# Директории для исключения
extend-exclude = [
    ".venv",
    "venv",
    "env",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "htmlcov",
    "*.pyi",
]

# Количество файлов для кэширования (для ускорения)
cache-dir = ".ruff_cache"

# Показывать исправления в выводе
show-fixes = true

# Выводить источник ошибок
output-format = "concise"

[tool.ruff.lint]
# Enable preview rules for experimental fixes (stable in Ruff v0.8+)
preview = true

# Категории правил для проверки
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020 (sys.version checks)
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "DJ",    # flake8-django
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "FIX",   # flake8-fixme
    "ERA",   # eradicate (commented code)
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "FLY",   # flynt (f-strings)
    "NPY",   # NumPy-specific rules
    "PERF",  # Perflint (performance)
    "FURB",  # refurb (modernize)
    "RUF",   # Ruff-specific rules
]

# Игнорируемые правила
ignore = [
    # ANN101 и ANN102 удалены в Ruff 0.1.0+
    "ANN401",   # Dynamically typed expressions (Any) are disallowed
    "S101",     # Use of assert detected (используется в pytest)
    "PLR0913",  # Too many arguments to function call
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLR0914",  # Too many local variables (часто необходимо в сложных функциях)
    "PLR2004",  # Magic value used in comparison
    "PLR6301",  # Method could be a function/static method (стиль, не влияет)
    "RUF001",   # String contains ambiguous unicode character (кириллица)
    "RUF002",   # Docstring contains ambiguous unicode character (кириллица)
    "RUF003",   # Comment contains ambiguous unicode character (кириллица)
    "RUF029",   # Function is declared async but doesn't await anything (не всегда требуется)
    "T201",     # print() found (иногда нужен для логирования)
    "T203",     # pprint found
    "EM101",    # Exception must not use a string literal (разрешаем литералы)
    "EM102",    # Exception must not use an f-string literal
    "TRY003",   # Avoid specifying long messages outside the exception class
    "FBT001",   # Boolean positional arg in function definition
    "FBT002",   # Boolean default value in function definition
    "FBT003",   # Boolean positional value in function call
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link on line following TODO
    "FIX002",   # Line contains TODO
    "COM812",   # Missing trailing comma (может конфликтовать с formatter)
    "ISC001",   # Implicitly concatenated string (может конфликтовать с formatter)
    "TC002",    # Type-checking import используется в runtime (pytest fixtures)
    # Дополнительные игнорирования для практичности
    "G004",     # Logging statement uses f-string (современный подход)
    "TRY401",   # Redundant exception object in logging.exception (читаемость)
    "PLC0415",  # Import should be at top-level (иногда нужны lazy imports)
    "BLE001",   # Do not catch blind exception (иногда необходимо)
    "ERA001",   # Found commented-out code (может быть полезно)
    "DTZ005",   # datetime.now() without timezone (не всегда критично)
    "S105",     # Hardcoded password string (часто ложные срабатывания)
    "S106",     # Hardcoded password function arg

    # === ДОПОЛНИТЕЛЬНЫЕ ИГНОРИРОВАНИЯ для практичной разработки ===
    # Аннотации типов - постепенное добавление
    "ANN001",   # Missing type annotation for function argument (постепенно добавляем)
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "ANN201",   # Missing return type annotation for public function (постепенно)
    "ANN202",   # Missing return type annotation for private function
    "ANN204",   # Missing return type annotation for special method

    # Неиспользуемые аргументы - часто нужны для интерфейсов/callbacks
    "ARG001",   # Unused function argument (callbacks, interfaces)
    "ARG002",   # Unused method argument (event handlers)
    "ARG003",   # Unused class method argument
    "ARG005",   # Unused lambda argument

    # Приватные члены - необходимы для API клиентов
    "SLF001",   # Private member accessed (нужно для _request patterns)

    # Стилистические предпочтения
    "TRY300",   # Consider moving statement inside else block (стиль)

    # Использование pathlib - не всегда необходимо
    "PTH123",   # open() should be replaced with Path.open()
    "PTH118",   # os.path.join() should be replaced with Path
    "PTH119",   # os.path.basename() should be replaced with Path.name
    "PTH120",   # os.path.dirname() should be replaced with Path.parent

    # Именование - API использует mixedCase
    "N815",     # Variable in class scope should not be mixedCase (API responses)
    "N803",     # Argument name should be lowercase (API parameters)
    "N806",     # Variable in function should be lowercase (API responses)
    "N816",     # Variable in global scope should not be mixedCase
    "N802",     # Function name should be lowercase (иногда для совместимости)

    # Безопасность - не критично для этого приложения
    "S311",     # Standard pseudo-random generators (не для криптографии)
    "S324",     # Probable use of insecure hash functions (для кэша, не безопасности)
    "S608",     # Possible SQL injection vector (используем ORM)

    # Дополнительные упрощения
    "B008",     # Do not perform function call in argument defaults (OK для Depends())
    "C901",     # Function is too complex (pylint handles это)
    "UP035",    # Import from typing deprecated (постепенная миграция)

    # === ДОПОЛНИТЕЛЬНЫЕ ИГНОРИРОВАНИЯ для уменьшения ложных срабатываний ===
    "E501",     # Line too long (форматтер Black/Ruff уже обрабатывает это)
    "PLW0603",  # Using global statement (нужно для singleton patterns)
    "PLW0602",  # Using global without assignment (часто для проверок)
    "PLW2901",  # Redefined loop variable (иногда необходимо)
    "RUF012",   # Mutable class default (иногда нужно для фабрик)
    "RUF006",   # Asyncio dangling task (иногда намеренно)
    "PERF401",  # Manual list comprehension (читаемость важнее)
    "SIM102",   # Collapsible if (читаемость)
    "SIM105",   # Suppressible exception (иногда необходимо)
    "SIM108",   # If-else to ternary (читаемость)
    "SIM117",   # Multiple with statements (Python 3.9+ нужно для совместимости)
    "PTH100",   # os.path.abspath (не критично)
    "PTH101",   # os.chmod (не критично)
    "PTH103",   # os.makedirs (не критично)
    "PTH108",   # os.unlink (не критично)
    "PTH110",   # os.path.exists (не критично)
    "G201",     # Logging exception (style preference)
    "DTZ005",   # datetime.now без timezone уже игнорируется
    "DTZ006",   # datetime.fromtimestamp без timezone (не всегда нужно)
    "TRY301",   # Raise in try (иногда необходимо)
    "ASYNC110", # Async busy wait (иногда нужен простой подход)
    "ASYNC109", # Async timeout parameter (legacy code)
    "ASYNC210", # Blocking HTTP in async (legacy)
    "ASYNC230", # Blocking file operations in async (small files OK)
    "ASYNC240", # Blocking pathlib in async (small operations OK)
    "PYI036",   # Bad exit annotation (legacy)
    "PYI049",   # Unused private TypedDict (может быть для документации)
    "PGH003",   # Blanket type ignore (постепенное улучшение)
    "N818",     # Exception naming (legacy exceptions)
    "B007",     # Unused loop variable (иногда нужно для side effects)
    "B017",     # pytest.raises too broad (tests)
    "B904",     # Raise without from (иногда упрощает код)
    "INP001",   # Implicit namespace package (tests)
    "PLR0911",  # Too many returns (читаемость)
    "PLR1702",  # Too many nested blocks (complex functions)
    "PLR0917",  # Too many positional arguments (API compatibility)
    "PLR1704",  # Redefined argument (иногда необходимо)
    "PT011",    # pytest.raises too broad (tests - допустимо)
    "PT017",    # pytest assert in except (tests - допустимо)
    "S110",     # Try-except-pass (иногда необходимо)
    "RUF034",   # Useless if-else (ложные срабатывания)
    "RUF100",   # Unused noqa (постепенное улучшение)
    "E402",     # Module import not at top (иногда нужны условные импорты)
    "PERF403",  # Manual dict comprehension (читаемость)
    "TRY002",   # Raise vanilla class (иногда допустимо)
    "F841",     # Unused variable (может быть намеренно, требует ручной проверки)
    "TC001",    # Move import into type-checking block (runtime needed)
    "TC003",    # Move stdlib import into type-checking block (runtime)
]# Разрешить автоисправление для этих правил
fixable = ["ALL"]

# Никогда не исправлять автоматически
unfixable = [
    "ERA001",  # commented-out code (может быть нужно)
    "T201",   # print statements (требует ручной проверки)
    "T203",   # pprint statements
]

[tool.ruff.lint.per-file-ignores]
# Тесты могут использовать assert и иметь другие особенности
"tests/**/*.py" = [
    "S101",     # assert
    "SLF001",   # доступ к приватным членам (для моков)
    "ANN",      # аннотации типов не обязательны в тестах
    "ARG",      # неиспользуемые аргументы (фикстуры)
    "PLR2004",  # magic values
]
# Скрипты миграции могут быть менее строгими
"scripts/**/*.py" = ["ANN", "T201"]
# __init__.py файлы
"__init__.py" = ["F401"]  # unused imports (re-exports)

[tool.ruff.lint.isort]
# Конфигурация сортировки импортов
known-first-party = ["src", "src.dmarket", "src.telegram_bot", "src.models", "src.utils"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2
# Группировка related imports
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-quotes]
# Использовать двойные кавычки
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
# Максимальная сложность функции (McCabe complexity)
max-complexity = 12

[tool.ruff.lint.pydocstyle]
# Google-style docstrings (строже проверяем документацию)
convention = "google"
# Игнорируем некоторые правила docstrings для упрощения
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
# Максимальное количество аргументов функции
max-args = 10
# Максимальное количество ветвлений
max-branches = 15
# Максимальное количество return statements
max-returns = 8
# Максимальное количество statements
max-statements = 60

[tool.ruff.lint.flake8-type-checking]
# Разрешить runtime-доступные аннотации
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["attrs.define", "dataclasses.dataclass"]

[tool.ruff.lint.flake8-import-conventions]
# Стандартные сокращения для импортов
[tool.ruff.lint.flake8-import-conventions.aliases]
numpy = "np"
pandas = "pd"
matplotlib = "mpl"
"matplotlib.pyplot" = "plt"
seaborn = "sns"

[tool.ruff.lint.flake8-pytest-style]
# Стиль pytest фикстур
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"
parametrize-values-row-type = "tuple"

[tool.ruff.lint.flake8-unused-arguments]
# Игнорировать неиспользуемые аргументы с префиксом _
ignore-variadic-names = true

[tool.ruff.format]
# Конфигурация форматтера Ruff (альтернатива Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Preview mode для новых фич форматирования
preview = true
# Docstring стиль
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
python_version = "3.13"  # Target Python 3.13+

# ============================================================================
# СТРОГИЙ РЕЖИМ (ОТКЛЮЧЕН для практичности - включаем нужные опции вручную)
# ============================================================================
strict = false  # Отключен - используем выборочные проверки

# Общие настройки
warn_return_any = false             # Отключено - слишком много ложных срабатываний с API
warn_unused_configs = true          # Предупреждать о неиспользуемых настройках
warn_unused_ignores = false         # Отключено - для постепенной миграции
show_error_codes = true             # Показывать коды ошибок
show_column_numbers = true          # Показывать номера колонок
show_error_context = true           # Показывать контекст ошибок
pretty = true                       # Красивый вывод ошибок
color_output = true                 # Цветной вывод
error_summary = true                # Итоговая сводка ошибок

# ============================================================================
# СТРОГОСТЬ ОПРЕДЕЛЕНИЙ ФУНКЦИЙ (умеренная)
# ============================================================================
disallow_untyped_defs = false       # Разрешить для постепенной типизации
disallow_incomplete_defs = true     # Требовать полные аннотации (если есть)
check_untyped_defs = true           # Проверять нетипизированные функции (важно для async!)
disallow_untyped_calls = false      # Разрешить вызовы нетипизированных функций
disallow_untyped_decorators = false # Разрешить нетипизированные декораторы

# ============================================================================
# РАБОТА С ANY (умеренная строгость)
# ============================================================================
disallow_any_generics = false       # Разрешить Any в generics (для API responses)
disallow_any_unimported = false     # Разрешить Any из неимпортированных модулей
disallow_any_expr = false           # Разрешить выражения типа Any
disallow_any_decorated = false      # Разрешить Any в декораторах
disallow_any_explicit = false       # Разрешить явный Any
disallow_subclassing_any = false    # Разрешить наследование от Any

# ============================================================================
# OPTIONAL И NONE
# ============================================================================
no_implicit_optional = true         # Запретить неявный Optional
strict_optional = true              # Строгая проверка Optional

# ============================================================================
# ПРЕДУПРЕЖДЕНИЯ
# ============================================================================
warn_redundant_casts = true         # Предупреждать о лишних cast
warn_no_return = true               # Предупреждать об отсутствии return
warn_unreachable = false            # Отключено - много ложных срабатываний
warn_incomplete_stub = false        # Отключено - не все библиотеки имеют stubs

# Дополнительные предупреждения для улучшения качества
enable_error_code = [
    "truthy-bool",           # Проверка булевых выражений
    # "redundant-expr",      # Отключено - ложные срабатывания
    "possibly-undefined",    # Возможно неопределенные переменные
    # "ignore-without-code", # Отключено - для постепенной миграции
    "unused-awaitable",      # Неиспользуемые awaitable
]

# Отключить определенные ошибки
disable_error_code = [
    "no-any-return",         # Слишком много с API responses
    "no-untyped-def",        # Для постепенной типизации
    "type-arg",              # Generics без параметров (Redis, Callable)
    "attr-defined",          # Отсутствующие атрибуты (много legacy кода)
    "assignment",            # Несовместимые присваивания (false positives)
    "arg-type",              # Несовместимые типы аргументов (API responses)
    "var-annotated",         # Неаннотированные переменные (для постепенной типизации)
    "call-arg",              # Неправильные аргументы вызова (legacy сигнатуры)
    "return-value",          # Несовместимые возвращаемые значения
    "index",                 # Неправильные индексы (dict/list)
    "union-attr",            # Атрибуты union типов
    "misc",                  # Разные ошибки
    "valid-type",            # Невалидные типы (Base class issues)
]

# ============================================================================
# СТРОГИЕ ПРОВЕРКИ
# ============================================================================
strict_equality = true              # Строгая проверка равенства
strict_concatenate = false          # Отключено - не критично

# ============================================================================
# ИМПОРТЫ
# ============================================================================
follow_imports = "normal"           # Следовать за импортами
ignore_missing_imports = true       # Игнорировать отсутствующие импорты (для библиотек без stubs)
namespace_packages = true           # Поддержка namespace packages
no_implicit_reexport = false        # Разрешить неявный реэкспорт
allow_redefinition = true           # Разрешить переопределение переменных
local_partial_types = false         # Запретить частичные типы в локальных переменных

# ============================================================================
# ПРОИЗВОДИТЕЛЬНОСТЬ
# ============================================================================
incremental = true                  # Инкрементальная проверка (кэширование)
cache_dir = ".mypy_cache"          # Директория кэша

# Плагины
plugins = [
    # "sqlalchemy.ext.mypy.plugin",  # Отключено - требует настройки
    # "pydantic.mypy",               # Для Pydantic моделей (если используется)
]

# Дополнительные опции
show_traceback = false              # Показывать traceback при внутренних ошибках

# Исключения
exclude = [
    "tests/",
    "scripts/",
    "create_env_file.py",
    "build/",
    "dist/",
    ".venv/",
    "alembic/",
]

# Переопределение для конкретных модулей
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true                # Игнорировать ошибки в тестах

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true                # Игнорировать ошибки в скриптах

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true                # Игнорировать ошибки в миграциях

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true       # Игнорировать отсутствующие stubs для yaml

[tool.coverage.run]
branch = true                       # Покрытие ветвлений (if/else)
source = ["src"]                    # Какой код измерять
parallel = false                    # Отключаем параллельный сбор (конфликт с dynamic_context)
concurrency = ["thread"]            # Только thread для совместимости (greenlet требует установки)
relative_files = true               # Использовать относительные пути
# dynamic_context = "test_function" # Отключено - вызывает конфликты
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
    "scripts/*",
    "**/conftest.py",
    "**/__main__.py",
]

# Подключение плагинов coverage
plugins = []

[tool.coverage.report]
precision = 2                       # Точность процентов (XX.XX%)
fail_under = 0                      # НЕ fail при одиночных тестах (для CI используем отдельную команду)
show_missing = true                 # Показать пропущенные строки
skip_covered = false               # Показывать полностью покрытые файлы
skip_empty = true                  # Пропускать пустые файлы
sort = "Cover"                     # Сортировка по покрытию
ignore_errors = false              # Не игнорировать ошибки
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __hash__",
    "def __eq__",
    "def __ne__",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "class .*\\bProtocol\\[.*\\]\\):",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "\\.\\.\\.",
    "pass",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"              # Директория для HTML отчета
show_contexts = false              # Отключено для избежания конфликтов

[tool.coverage.json]
output = "coverage.json"           # JSON отчет для CI/CD
show_contexts = false

[tool.coverage.xml]
output = "coverage.xml"            # XML отчет для CI/CD

[tool.vulture]
paths = ["src"]
min_confidence = 80
exclude = ["tests/", ".venv/", "venv/"]
ignore_names = ["test_*", "setUp", "tearDown"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 85
exclude = ["setup.py", "docs", "build", "tests"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    # Убран -v для ускорения (используйте pytest -v для verbose)
    # "--cov=src",  # Coverage отключен по умолчанию для скорости
    # "--cov-report=html",
    # "--cov-report=term-missing:skip-covered",
    # "--cov-report=xml",
    # "--cov-branch",
    "--tb=short",
    "-ra",
    "--durations=10",  # Показывать 10 самых медленных тестов
    "--timeout=60",    # Глобальный таймаут 60 сек на тест (для предотвращения зависаний)
    "-x",              # Остановка при первой ошибке для быстрого feedback
    # Игнорирование проблемных тестов, требующих опциональных зависимостей
    "--ignore=tests/unit/test_mcp_server.py",
    "--ignore=tests/mcp_server/",
    "--ignore=tests/integration/test_n8n_workflows.py",
    "--ignore=tests/unit/api/test_n8n_integration.py",
    "--ignore=tests/e2e/test_complete_arbitrage_flow.py",
]
markers = [
    "unit: Quick unit tests (no DB/API)",
    "integration: DB/Redis/API mocks required",
    "e2e: Full end-to-end with fixtures",
    "slow: Marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: Async tests (auto-detected)",
    "smoke: Critical path smoke tests",
    "flaky: Tests that may fail intermittently (retry enabled)",
    "database: Tests requiring database",
    "redis: Tests requiring Redis",
    "api: Tests calling external APIs",
    "vcr: Tests using VCR.py for HTTP recording/playback",
    "log_level(level): Set logging level for this test (DEBUG, INFO, WARNING, ERROR)",
    "quiet_logs: Suppress all logs during this test",
    "verbose_logs: Show all DEBUG logs during this test",
    "timeout(seconds): Set custom timeout for this test",
    "performance: Performance and load tests (auto-marked as slow)",
    "comprehensive: Comprehensive tests (auto-marked as slow)",
    "property_based: Property-based testing with Hypothesis",
    "localization: Localization and i18n tests",
    "critical: Critical path tests that must pass",
    "security: Security-related tests",
    "quick: Quick tests for fast feedback",
    "fuzz: Fuzzing tests",
    "i18n: Internationalization tests",
    "high_risk: High-risk feature tests",
    "regression: Regression tests for bug fixes",
]
asyncio_mode = "auto"  # Auto-detect async tests
asyncio_default_fixture_loop_scope = "function"
# Таймаут по умолчанию для каждого теста (секунды)
timeout = 60

# Логирование в тестах
# По умолчанию отключаем вывод логов в консоль для чистоты вывода
# Включить: pytest --log-cli-level=INFO
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)-8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

# Логирование в файл (подробный DEBUG лог)
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)-8s] %(name)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Фильтры предупреждений
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

# ============================================================================
# HYPOTHESIS - PROPERTY-BASED TESTING
# ============================================================================

[tool.hypothesis]
# Profile "default" для CI/обычного запуска
# Profile "ci" для быстрых прогонов в CI
profile = "default"

[tool.hypothesis.profiles.default]
# Умеренные настройки для локальной разработки
max_examples = 100
deadline = 1000  # 1 секунда на пример
verbosity = "normal"
phases = ["explicit", "reuse", "generate", "target"]
database = ".hypothesis/examples"
suppress_health_check = []

[tool.hypothesis.profiles.ci]
# Быстрые настройки для CI pipeline
max_examples = 50
deadline = 500  # 500ms на пример
verbosity = "quiet"
derandomize = true  # Детерминированные тесты в CI

[tool.hypothesis.profiles.dev]
# Расширенные настройки для глубокого тестирования
max_examples = 500
deadline = 5000  # 5 секунд на сложные тесты
verbosity = "verbose"
stateful_step_count = 50


[tool.poetry.group.dev.dependencies]
circuitbreaker = "^2.1.3"
hypothesis = "^6.150.2"

