[package]
name = "rust_core"
version = "0.9.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
ed25519-dalek = "2.2"
hex = "0.4"
sha2 = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
