[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bumpalo = "3.14.0"
governor = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "blocking", "rustls-tls", "gzip", "brotli", "deflate"] } 
log = "0.4"
ed25519-dalek = "2.0" 
url = "2.4.1"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3.30"
hex = "0.4.3"
